# redox_balancer

./: .gitignore  AWS_BEST_PRACTICES.md  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_CHECKLIST.md  CHATGPT_ONBOARDING.md  CLAUDE.md  GET_TO_LICENSE.md  INVESTOR_ONE_PAGER_clean.md  POST_TRAINING_ANALYSIS.md  README.md  S3_INDEX.md  TODO.md  pyproject.toml  requirements.txt  s3_manifest.txt
aws-launch/: role-policy.json  s3-access-policy.json  user_data.sh
data/: enzyme_library_redox.json
data/models/: redox_core_v1.metadata.json  redox_core_v2.json  redox_core_v2.metadata.json  test_full_model.json
patents/: README.md  claims_draft.docx  claims_draft.md  disclosure_form.txt  invention_overview.md  prior_art_table.md  technical_whitepaper.docx  technical_whitepaper.md
patents/figures/: README.txt
scripts/: aws_setup.sh  build_redox_core.py  build_redox_core_v2.py  check_consistency.py  check_core_model.py  check_system.sh  cleanup_ray.sh  convert_figures_to_pdf.py  create_fig1_system_overview.py  debug_core_model.py  debug_reward.py  debug_sink_reactions.py  download_for_evaluation.sh  download_for_training.sh  download_for_visualization.sh  eval_agents.py  find_missing_precursors.py  make_patent_figures.py  manage_tensorboard.sh  monitor_memory.sh  monitor_memory_leak.sh  monitor_training.sh  plot_training_curve.py  production_run.sh  quick_eval.py  resume_training_fixed_v2.sh  resume_training_safe.sh  resume_training_with_fixes.sh  role-policy.json  run_aws_experiment.sh  s3_backup.sh  s3_setup.sh  simple_test.py  start_training_fixed.sh  sync_from_aws.sh  sync_to_aws.sh  test_core_builder.py  test_essentiality.py  test_s3_workflow.sh  train_impala.py  (+1 more)
src/redox_balancer/: __init__.py
src/redox_balancer/agents/: __init__.py  impala_agent.py  networks.py  trainer.py
src/redox_balancer/cache/: __init__.py  delta_cache.py
src/redox_balancer/data/: enzyme_library.py  smoke_test_model.json
tests/: __init__.py  conftest.py  test_redox_env.py
wetlab/: README.md  budget_timeline.md  construct_manifest.xlsx  gene_sequences.fasta
wetlab/assays/: fba_validation_lcms.md  nadh_balance_colorimetric.md  plate_reader_template.xlsx
wetlab/cloning/: GoldenGate_protocol.md
wetlab/expression/: host_selection.md  induction_schedule.md  troubleshooting.md
wetlab/safety_compliance/: gmo_risk_assessment.docx  material_safety_data_links.txt
(+5 files in other folders)
